// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RemoveGroupsForm > render > should render 1`] = `ShallowWrapper {}`;

exports[`RemoveGroupsForm > updates > should allow switching from router > switch from router 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "all_groups": false,
        "groups": [
          {
            "name": "Subscriber",
            "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
          },
        ],
        "type": "remove_contact_groups",
        "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`RemoveGroupsForm > updates > should handle remove from all groups > update 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "all_groups": true,
        "groups": [],
        "type": "remove_contact_groups",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`RemoveGroupsForm > updates > should handle updates and save > update 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "all_groups": false,
        "groups": [
          {
            "name": "Subscriber",
            "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
          },
        ],
        "type": "remove_contact_groups",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
